# sifter-bug-intake

./: .env.bug_intake.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Sifter-bug-intake  pyproject.toml
.cursor/skills/bug-intake/: SKILL.md
.github/workflows/: ci.yml
bug_intake/: __init__.py  __main__.py  actions.py  cli.py  config.py  log.py  models.py
bug_intake/channels/: base.py  gmail.py
bug_intake/issue_providers/: __init__.py  base.py  github_gh.py
bug_intake/templates/: __init__.py
tests/: test_config.py  test_github_issue_url.py  test_processing_log.py
