[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-intake"
version = "0.1.0"
description = "Sifter local-first bug intake CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "google-api-python-client>=2.150.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.0",
  "requests>=2.33.0; python_version >= '3.10'",
  "requests>=2.32.5;  python_version <  '3.10'",
  "filelock>=3.20.3;  python_version >= '3.10'",
]

[project.scripts]
bug-intake = "bug_intake.cli:main"

[tool.setuptools.packages.find]
include = ["bug_intake*"]

[tool.setuptools.package-data]
"bug_intake.templates" = ["*.md"]
