[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-intake"
version = "0.1.0"
description = "Sifter local-first bug intake CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "google-api-python-client>=2.150.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.0",
  "requests>=2.32.5",
  "filelock>=3.20.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
bug-intake = "bug_intake.cli:main"

[tool.setuptools.packages.find]
include = ["bug_intake*"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"bug_intake.templates" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
